Hero layout shifting fix

--- a/src/components/home/Hero/Hero.module.css
+++ b/src/components/home/Hero/Hero.module.css
@@ -8,7 +8,7 @@
     pointer-events: none;
     z-index: 1;
     position: relative;
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     align-items: center;
     justify-content: center;
